# ProjecteWeb

./: README.md  pyproject.toml
API/: basicapi.py  jsonapi.py
DjangoApp/eazytapa/: Dockerfile  docker-compose.debug.yml  docker-compose.yml  manage.py  requirements.txt
DjangoApp/eazytapa/eazytapa/: asgi.py  settings.py  urls.py  wsgi.py
DjangoApp/eazytapa/web/: admin.py  models.py  views.py
DjangoApp/eazytapa/web/migrations/: 0001_initial.py
DjangoApp/eazytapa/web/templates/web/: bar.html  index.html  tapa.html
WebScrape/: basicclient.py
