[tool.poetry]
name = "projecteweb"
version = "0.1.0"
description = "Code for the Projecte Web course."
authors = ["Carles Mateu <carlesm@carlesm.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
urllib3 = "^1.26.14"
bs4 = "^0.0.1"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
